// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickUpFormPart component should renders correctly props not present 1`] = `
<Styled(View)
  isPayPalWebViewEnable={false}
>
  <CheckoutProgressIndicator
    activeStage="billing"
    availableStages={Object {}}
    navigation={Object {}}
  />
  <ScrollViewMock
    disableScrollViewPanResponder={true}
  >
    <Styled(View)
      isPayPalWebViewEnable={false}
    >
      <CheckoutSectionTitleDisplay />
      <Connect(GiftCardsContainer) />
      <Connect(GuestBillingContainer)
        addressLabels={Object {}}
        billingData={null}
        creditFieldLabels={Object {}}
        cvvCodeRichText={null}
        isGuest={true}
        isPayPalWebViewEnable={false}
        isVenmoEnabled={false}
        isVenmoPaymentInProgress={false}
        labels={Object {}}
        navigation={Object {}}
        shippingAddress={null}
      />
    </Styled(View)>
  </ScrollViewMock>
</Styled(View)>
`;

exports[`PickUpFormPart component should renders correctly props not present 2`] = `
<Styled(View)
  isPayPalWebViewEnable={false}
>
  <CheckoutProgressIndicator
    activeStage="billing"
    availableStages={Object {}}
    navigation={Object {}}
  />
  <ScrollViewMock
    disableScrollViewPanResponder={true}
  >
    <Styled(View)
      isPayPalWebViewEnable={false}
    >
      <CheckoutSectionTitleDisplay />
      <Connect(GiftCardsContainer) />
      <Connect(GiftCardsContainer)
        addressLabels={Object {}}
        billingData={null}
        creditFieldLabels={Object {}}
        cvvCodeRichText={null}
        handleSubmit={[Function]}
        isGuest={false}
        isPayPalWebViewEnable={false}
        isVenmoEnabled={false}
        isVenmoPaymentInProgress={false}
        labels={Object {}}
        navigation={Object {}}
        shippingAddress={null}
        userAddresses={null}
      />
    </Styled(View)>
  </ScrollViewMock>
</Styled(View)>
`;
